update event-sink to new contract, add csv downloading
